# mytarot_backend

./: Dockerfile  README.md  configs.py  containers.py  databases.py  main.py  pyproject.toml
.github/workflows/: build_and_push_dockerhub.yaml
app/: exceptions.py  utils.py
app/dtos/: __init__.py  tarots.py
app/entities/: base.py  tarots.py
app/repositories/: tarots.py
app/routers/: __init__.py  tarots.py
app/services/: tarots.py
migrations/: env.py
migrations/versions/: 93a07f335264_add_compatibility_tarot_results.py  d81ed4a40859_add_tarots_table.py
